# tinyConfigCpp

./: CMakeLists.txt  config.cpp  config.h  readme.md
